[gd_scene load_steps=9 format=3 uid="uid://dx367olnv4jly"]

[ext_resource type="Theme" uid="uid://cdpahudvr7n3t" path="res://ui/Ui.tres" id="1_klrwp"]
[ext_resource type="Script" path="res://scripts/ui.gd" id="1_mk2rm"]
[ext_resource type="Texture2D" uid="uid://bmeaxme02o2r8" path="res://art/environment/splash1_320x160.png" id="3_6mtop"]
[ext_resource type="Texture2D" uid="uid://biu0u4v7eesi2" path="res://ui/DISCLAIMER.png" id="4_2kcvs"]

[sub_resource type="Animation" id="Animation_duukv"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_18at2"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimationPlayer/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimationPlayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_tdnb4"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_g22p2"]
_data = {
"RESET": SubResource("Animation_tdnb4"),
"fade_in": SubResource("Animation_duukv"),
"fade_out": SubResource("Animation_18at2")
}

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_klrwp")
script = ExtResource("1_mk2rm")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 320.0
offset_bottom = 180.0
texture = ExtResource("3_6mtop")
expand_mode = 1

[node name="ButtonContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.05
anchor_top = 0.412
anchor_right = 0.3
anchor_bottom = 0.9
offset_top = 0.0799942
alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StartGameButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.658824, 0.792157, 0.345098, 1)
text = "START GAME"

[node name="OptionsButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.658824, 0.792157, 0.345098, 1)
text = "OPTIONS
"

[node name="QuitButton" type="Button" parent="ButtonContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.647059, 0.188235, 0.188235, 1)
text = "QUIT"

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_2kcvs")
expand_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_g22p2")
}

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
visible = false
offset_right = 320.0
offset_bottom = 180.0
color = Color(0, 0, 0, 1)

[connection signal="mouse_entered" from="ButtonContainer/StartGameButton" to="." method="_on_start_game_button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/OptionsButton" to="." method="_on_options_button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/OptionsButton" to="." method="_on_options_button_pressed"]
[connection signal="mouse_entered" from="ButtonContainer/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="ButtonContainer/QuitButton" to="." method="_on_quit_button_pressed"]
